bindata/etcd/backup-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: openshift-etcd
  name: cluster-backup
  labels:
    app: cluster-backup
spec:
  hostNetwork: true
  nodeSelector:
    node-role.kubernetes.io/master: ""
  tolerations:
    - key: node-role.kubernetes.io/master
      effect: NoSchedule
      operator: Exists
    - key: node.kubernetes.io/not-ready
      effect: NoExecute
      operator: Exists
      tolerationSeconds: 120
    - key: node.kubernetes.io/unreachable
      effect: NoExecute
      operator: Exists
      tolerationSeconds: 120
    - key: node-role.kubernetes.io/etcd
      operator: Exists
      effect: NoSchedule
  serviceAccountName: installer-sa
  containers:
      - name: cluster-backup
        imagePullPolicy: IfNotPresent
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /etc/kubernetes/
          name: etc-kubernetes
        - mountPath: /backup/
          name: backup
        command:
        - "/bin/bash"
        - "-c"
        - "trap TERM INT; sleep infinity & wait"
  priorityClassName: system-node-critical
  tolerations:
  - operator: "Exists"
  volumes:
    - name: backup
      emptyDir: {}
    - name: etc-kubernetes
      emptyDir: {}
    - name: etcd-ca
      configMap:
        name: etcd-ca-bundle
    - name: etcd-client
      secret:
        secretName: etcd-client
