bindata/etcd/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: etcd
  namespace: openshift-etcd
  annotations:
    kubectl.kubernetes.io/default-container: etcd
    target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
  labels:
    app: etcd
    k8s-app: etcd
    etcd: "true"
    revision: "REVISION"
spec:
  ${COMPUTED_ENV_VARS}
- name: NODE_IP
  valueFrom:
    fieldRef:
      fieldPath: status.podIP
- name: etcd-resources-copy
  image: ${IMAGE}
  imagePullPolicy: IfNotPresent
  terminationMessagePolicy: FallbackToLogsOnError
  command:
    - /bin/sh
    - -c
    - |
      #!/bin/sh
      set -euo pipefail
      
      rm -f $(grep -l '^### Created by cluster-etcd-operator' /usr/local/bin/*)
      cp -p /etc/kubernetes/static-pod-certs/configmaps/etcd-scripts/*.sh /usr/local/bin

  resources:
    requests:
      memory: 60Mi
      cpu: 10m
  securityContext:
    privileged: true
  volumeMounts:
    - mountPath: /etc/kubernetes/static-pod-resources
      name: resource-dir
    - mountPath: /etc/kubernetes/static-pod-certs
      name: cert-dir
    - mountPath: /usr/local/bin
      name: usr-local-bin
containers:
  # The etcdctl container should always be first. It is intended to be used
  # to open a remote shell via `oc rsh` that is ready to run `etcdctl`.
  - name: etcdctl
    image: ${IMAGE}
    imagePullPolicy: IfNotPresent
    terminationMessagePolicy: FallbackToLogsOnError
    command:
      - "/bin/bash"
      - "-c"
      - "trap TERM INT; sleep infinity & wait"
    resources:
      requests:
        memory: 60Mi
        cpu: 10m
    volumeMounts:
      - mountPath: /etc/kubernetes/manifests
        name: static-pod-dir
      - mountPath: /etc/kubernetes/static-pod-resources
        name: resource-dir
      - mountPath: /etc/kubernetes/static-pod-certs
        name: cert-dir
      - mountPath: /var/lib/etcd/
        name: data-dir
  ${COMPUTED_ENV_VARS}
  - name: "ETCD_STATIC_POD_VERSION"
value: "REVISION"
- name: etcd
  image: ${IMAGE}
  imagePullPolicy: IfNotPresent
  terminationMessagePolicy: FallbackToLogsOnError
  command:
    - /bin/sh
    - -c
    - |
      [...]
  ${COMPUTED_ENV_VARS}
  - name: "ETCD_STATIC_POD_VERSION"
value: "REVISION"
resources:
  requests:
    memory: 600Mi
    cpu: 300m
readinessProbe:
  httpGet:
    port: 9980
    path: readyz
    scheme: HTTPS
  timeoutSeconds: 30
  failureThreshold: 5
  periodSeconds: 5
  successThreshold: 1
livenessProbe:
  httpGet:
    path: healthz
    port: 9980
    scheme: HTTPS
  timeoutSeconds: 30
  periodSeconds: 5
  successThreshold: 1
  failureThreshold: 5
startupProbe:
  httpGet:
    port: 9980
    path: readyz
    scheme: HTTPS
  initialDelaySeconds: 10
  timeoutSeconds: 1
  periodSeconds: 10
  successThreshold: 1
  failureThreshold: 18
securityContext:
  privileged: true
volumeMounts:
  - mountPath: /etc/kubernetes/manifests
    name: static-pod-dir
  - mountPath: /etc/kubernetes/static-pod-resources
    name: resource-dir
  - mountPath: /etc/kubernetes/static-pod-certs
    name: cert-dir
  - mountPath: /var/lib/etcd/
    name: data-dir
- name: etcd-metrics
  image: ${IMAGE}
  imagePullPolicy: IfNotPresent
  terminationMessagePolicy: FallbackToLogsOnError
  command:
    - /bin/sh
    - -c
    - |
      #!/bin/sh
      set -euo pipefail
      
      export ETCD_NAME=${NODE_NODE_ENVVAR_NAME_ETCD_NAME}
      
      exec nice -n -18 etcd grpc-proxy start \
        --endpoints https://${NODE_NODE_ENVVAR_NAME_ETCD_URL_HOST}:9978 \
        --metrics-addr https://${LISTEN_ON_ALL_IPS}:9979 \
        --listen-addr ${LOCALHOST_IP}:9977 \
        --advertise-client-url ""  \
        --key /etc/kubernetes/static-pod-certs/secrets/etcd-all-certs/etcd-peer-NODE_NAME.key \
        --key-file /etc/kubernetes/static-pod-certs/secrets/etcd-all-certs/etcd-serving-metrics-NODE_NAME.key \
        --cert /etc/kubernetes/static-pod-certs/secrets/etcd-all-certs/etcd-peer-NODE_NAME.crt \
        --cert-file /etc/kubernetes/static-pod-certs/secrets/etcd-all-certs/etcd-serving-metrics-NODE_NAME.crt \
        --cacert /etc/kubernetes/static-pod-certs/configmaps/etcd-all-bundles/server-ca-bundle.crt \
        --trusted-ca-file /etc/kubernetes/static-pod-certs/configmaps/etcd-all-bundles/metrics-ca-bundle.crt \
        --listen-cipher-suites TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_AES_128_GCM_SHA256,TLS_AES_256_GCM_SHA384,TLS_CHACHA20_POLY1305_SHA256
  ${COMPUTED_ENV_VARS}
  - name: "ETCD_STATIC_POD_VERSION"
value: "REVISION"
resources:
  requests:
    memory: 200Mi
    cpu: 40m
securityContext:
  privileged: true
volumeMounts:
  - mountPath: /etc/kubernetes/static-pod-resources
    name: resource-dir
  - mountPath: /etc/kubernetes/static-pod-certs
    name: cert-dir
  - mountPath: /var/lib/etcd/
    name: data-dir
- name: etcd-readyz
  image: ${OPERATOR_IMAGE}
  imagePullPolicy: IfNotPresent
  terminationMessagePolicy: FallbackToLogsOnError
  command:
    - /bin/sh
    - -c
    - |
      #!/bin/sh
      set -euo pipefail
      
      exec nice -n -18 cluster-etcd-operator readyz \
        --target=https://localhost:2379 \
        --listen-port=9980 \
        --serving-cert-file=/etc/kubernetes/static-pod-certs/secrets/etcd-all-certs/etcd-serving-NODE_NAME.crt \
        --serving-key-file=/etc/kubernetes/static-pod-certs/secrets/etcd-all-certs/etcd-serving-NODE_NAME.key \
        --client-cert-file=$(ETCDCTL_CERT) \
        --client-key-file=$(ETCDCTL_KEY) \
        --client-cacert-file=$(ETCDCTL_CACERT)
  securityContext:
    privileged: true
  ports:
    - containerPort: 9980
      name: readyz
      protocol: TCP
  resources:
    requests:
      memory: 50Mi
      cpu: 10m
  ${COMPUTED_ENV_VARS}
volumeMounts:
  - mountPath: /var/log/etcd/
    name: log-dir
  - mountPath: /etc/kubernetes/static-pod-certs
    name: cert-dir
- name: etcd-backup-server
  image: ${OPERATOR_IMAGE}
  imagePullPolicy: IfNotPresent
  terminationMessagePolicy: FallbackToLogsOnError
  command: [cluster-etcd-operator]
  args:
  ${COMPUTED_BACKUP_VARS}
securityContext:
  privileged: true
resources:
  requests:
    memory: 50Mi
    cpu: 10m
volumeMounts:
  - mountPath: /var/lib/etcd
    name: data-dir
  - mountPath: /etc/kubernetes
    name: config-dir
  - mountPath: /var/backup/etcd
    name: backup-dir
  - mountPath: /etc/kubernetes/static-pod-certs
    name: cert-dir
hostNetwork: true
priorityClassName: system-node-critical
tolerations:
  - operator: "Exists"
volumes:
  - hostPath:
      path: /etc/kubernetes/manifests
    name: static-pod-dir
  - hostPath:
      path: /etc/kubernetes/static-pod-resources/etcd-pod-REVISION
    name: resource-dir
  - hostPath:
      path: /etc/kubernetes/static-pod-resources/etcd-certs
    name: cert-dir
  - hostPath:
      path: /var/lib/etcd
      type: ""
    name: data-dir
  - hostPath:
      path: /usr/local/bin
    name: usr-local-bin
  - hostPath:
      path: /var/log/etcd
    name: log-dir
  - hostPath:
      path: /etc/kubernetes
    name: config-dir
  - hostPath:
      path: /var/backup/etcd
      type: DirectoryOrCreate
    name: backup-dir
