bindata/etcd/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: openshift-etcd
  name: etcd
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: serving-cert
    prometheus.io/scrape: "true"
    prometheus.io/scheme: https
  labels:
    # this label is used to indicate that it should be scraped by prometheus
    k8s-app: etcd
spec:
  selector:
    etcd: "true"
  ports:
    - name: etcd
      port: 2379
      protocol: TCP
    - name: etcd-http
      port: 2381
      protocol: TCP
    - name: etcd-peer
      port: 2380
      protocol: TCP
    - name: grpc-proxy
      port: 9978
      protocol: TCP
    - name: etcd-metrics
      port: 9979
      protocol: TCP
    - name: readyz-sidecar
      port: 9980
      protocol: TCP
